# exchangeRate_graphic

./: CMakeLists.txt  README.md
save/: exchangeRate_CAD.json
src/: exchanger.cpp  exchanger.h  frame.cpp  frame.h  main.cpp  main.h
